src-ken&y/objects/Journal_Entry_Line__c.object
<CustomObject>
    <customHelpPage>HelpJournalEntry</customHelpPage>
    <fields>
        <fullName>Accounting_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting Code</label>
        <referenceTo>Accounting_Code__c</referenceTo>
        <relationshipLabel>Journal Entry Lines</relationshipLabel>
        <relationshipName>Journal_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_CR__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Credit amount for this transaction</description>
        <label>Amount CR</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_DR__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Debit amount for this transaction</description>
        <label>Amount DR</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Bank_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>Bank_Account__c</referenceTo>
        <relationshipLabel>Journal Entry Lines</relationshipLabel>
        <relationshipName>Journal_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bank_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Transaction</label>
        <referenceTo>Bank_Transaction__c</referenceTo>
        <relationshipLabel>Journal Entry Lines</relationshipLabel>
        <relationshipName>Journal_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Company</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Journal Entry Lines</relationshipLabel>
        <relationshipName>Journal_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <formula>Journal_Entry__r.Currency__r.ISO_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Journal Entry Lines</relationshipLabel>
        <relationshipName>Journal_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>If error occurs the error message will be stored in this field</description>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exceptions_Count__c</fullName>
        <label>Exceptions Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Finalized__c</fullName>
        <formula>Journal_Entry__r.Finalized__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>GL account</description>
        <label>GL Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>GL Account must be active.</errorMessage>
            <filterItems>
                <field>GL_Account__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Journal Entry Lines</relationshipLabel>
        <relationshipName>Journal_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_Exceptions__c</fullName>
        <formula>Exceptions_Count__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Exceptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intercompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Journal Entry Lines (Intercompany)</relationshipLabel>
        <relationshipName>Interco_Journal_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Journal_Entry__c</fullName>
        <label>Journal Entry</label>
        <referenceTo>Journal_Entry__c</referenceTo>
        <relationshipLabel>Journal Entry Lines</relationshipLabel>
        <relationshipName>Journal_Entry_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Line_Type__c</fullName>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mandatory_Segment_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mandatory Segment Exception is set to true when any of the mandatory segments are null</description>
        <inlineHelpText>A checkmark indicates that one or more mandatory segments are null.</inlineHelpText>
        <label>Mandatory Segment Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Period_Name__c</fullName>
        <description>Period Name</description>
        <formula>Journal_Entry__r.Period__r.Name</formula>
        <label>Period Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reversing_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reversing Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_ID__c</fullName>
        <description>The record ID of the related record providing the source data for this Journal entry line.</description>
        <label>Source ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Name__c</fullName>
        <description>The record name of the related record providing the source data for this Journal entry line.</description>
        <label>Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>A link to the source record for this Journal Entry Line</description>
        <formula>HYPERLINK(&apos;/&apos; + Source_ID__c, Source_Name__c, &apos;_top&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubTransaction_Type__c</fullName>
        <description>Sub Transaction Type</description>
        <label>SubTransaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Off Invoice Allowance</fullName>
                </value>
                <value>
                    <fullName>Sundry Allowance</fullName>
                </value>
                <value>
                    <fullName>Bill Back Allowance</fullName>
                </value>
                <value>
                    <fullName>Deductions</fullName>
                </value>
                <value>
                    <fullName>Earned Discount</fullName>
                </value>
                <value>
                    <fullName>Unearned Discount</fullName>
                </value>
                <value>
                    <fullName>Write Off</fullName>
                </value>
                <value>
                    <fullName>Bank Adjustment</fullName>
                </value>
                <value>
                    <fullName>Bank Interest Income</fullName>
                </value>
                <value>
                    <fullName>Bank Fees</fullName>
                </value>
                <value>
                    <fullName>OverPayment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <formula>Journal_Entry__r.Supplier__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_lu__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Journal Entry Lines</relationshipLabel>
        <relationshipName>Journal_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_Currency__c</fullName>
        <formula>Text( Journal_Entry__r.Transaction_Currency__c )</formula>
        <label>Transaction Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <description>Transaction Date of this Journal Entry Line</description>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <label>Journal Entry Line</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Journal Entry Line</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Journal Entry Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BA_Not_Allowed_for_Auto_Reversal_JE</fullName>
        <active>true</active>
        <description>Validation rule that throws an error if Bank account on JEL is populated while the checkbox for Auto-reversal is set to true.</description>
        <errorConditionFormula>AND(Journal_Entry__r.Auto_Reverse__c, Bank_Account__c != null)</errorConditionFormula>
        <errorMessage>You can&apos;t enter a bank account on journal entry lines when the Auto Reverse field is selected. You must remove bank account values on all lines before you can select the Auto Reverse field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bank_Transaction_Currency_should_be_same</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( ISBLANK(Bank_Transaction__c)) &amp;&amp;  Bank_Transaction__r.Currency__r.ISO_Code__c != Journal_Entry__r.Currency__r.ISO_Code__c</errorConditionFormula>
        <errorMessage>The transaction currency on the bank transaction and journal entry must be same.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bank_Transaction_should_be_finalized</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( ISBLANK(Bank_Transaction__c)) &amp;&amp; ( Bank_Transaction__r.Finalized__c == false ||  Bank_Transaction__r.Bank_Transaction_Group__r.Void__c == true)</errorConditionFormula>
        <errorMessage>Please select bank transactions that are finalized and not voided</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bank_account_have_same_currency</fullName>
        <active>true</active>
        <description>Bank account must have the same currency as the Journal Entry</description>
        <errorConditionFormula>NOT(ISBLANK( Bank_Account__c )) &amp;&amp; Currency__c != Bank_Account__r.Currency__r.ISO_Code__c</errorConditionFormula>
        <errorMessage>You can&apos;t save this journal entry because the currency is different from the bank account currency.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CR_DR_Check</fullName>
        <active>true</active>
        <errorConditionFormula>Amount_CR__c != 0 &amp;&amp; Amount_DR__c != 0</errorConditionFormula>
        <errorMessage>Amount Debit and Amount Credit both can not be specified on the same journal entry line. Please create separate lines for Credit and Debit.</errorMessage>
    </validationRules>
</CustomObject>